--- a/.github/workflows/BuildProject.yml
+++ b/.github/workflows/BuildProject.yml
@@ -11,7 +11,7 @@ on:
 jobs:
   build:
     name: Build wxPython
-    runs-on: macos-12
+    runs-on: self-hosted
     if: github.repository_owner == 'laobamac'
 
     env:
