--- a/.github/workflows/Validate.yml
+++ b/.github/workflows/Validate.yml
@@ -11,7 +11,7 @@ on:
 jobs:
   build:
     name: Validate
-    runs-on: macos12
+    runs-on: macos-latest
     if: github.repository_owner == 'laobamac'
     steps:
       - uses: actions/checkout@v4
