--- a/.github/workflows/Validate.yml
+++ b/.github/workflows/Validate.yml
@@ -16,4 +16,4 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: Validate
-        run: /Library/Frameworks/Python.framework/Versions/3.11/bin/python3 OpenCore-Patcher-GUI.command --validate
+        run: /Library/Frameworks/Python.framework/Versions/3.11/bin/python3 OCLP-Mod.command --validate
