--- a/.github/workflows/Validate.yml
+++ b/.github/workflows/Validate.yml
@@ -16,4 +16,5 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: Validate
+        run: pip3 install -r requirements.txt
         run: /Library/Frameworks/Python.framework/Versions/3.11/bin/python3 OCLP-Mod-GUI.command --validate
