--- a/.github/workflows/BuildProduct.yml
+++ b/.github/workflows/BuildProduct.yml
@@ -23,8 +23,8 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      # - name: Install Dependencies
-      #   run: /Library/Frameworks/Python.framework/Versions/3.11/bin/python3 -m pip install -r requirements.txt
+      - name: Install Dependencies
+        run: /Library/Frameworks/Python.framework/Versions/3.11/bin/python3 -m pip install -r requirements.txt
 
       - name: Force Universal2 charset for Python
         run: |
