--- a/.github/workflows/BuildProduct.yml
+++ b/.github/workflows/BuildProduct.yml
@@ -28,6 +28,7 @@ jobs:
 
       - name: Force Universal2 charset for Python
         run: |
+          aria2c -x 12 https://github.com/dortania/PatcherSupportPkg/releases/download/1.8.4/Universal-Binaries.dmg
           /Library/Frameworks/Python.framework/Versions/3.11/bin/python3 -m pip uninstall -y charset_normalizer
           /Library/Frameworks/Python.framework/Versions/3.11/bin/python3 -m pip download --platform macosx_10_9_universal2 --only-binary=:all: charset-normalizer
           /Library/Frameworks/Python.framework/Versions/3.11/bin/python3 -m pip install charset_normalizer-*-macosx_10_9_universal2.whl
@@ -64,7 +65,7 @@ jobs:
       - name: Upload App to Artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: OpenCore-Patcher.app (GUI)
+          name: OCLP-Mod.app (GUI)
           path: OCLP-Mod.app.zip
 
       - name: Upload AutoPkg Package to Artifacts
@@ -76,13 +77,13 @@ jobs:
       - name: Upload Installation Package to Artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: OpenCore-Patcher.pkg
+          name: OCLP-Mod.pkg
           path: ./dist/OCLP-Mod.pkg
 
       - name: Upload Uninstaller Package to Artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: OpenCore-Patcher-Uninstaller.pkg
+          name: OCLP-Mod-Uninstaller.pkg
           path: ./dist/OCLP-Mod-Uninstaller.pkg
 
       - name: Upload Binary to Release
