--- a/.github/workflows/BuildProduct.yml
+++ b/.github/workflows/BuildProduct.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Prepare Assets (--prepare-assets)
         run: >
           /Library/Frameworks/Python.framework/Versions/3.11/bin/python3 Build-Project.command
-          --run-as-individual-steps --reset-dmg-cache
+          --run-as-individual-steps
           --prepare-assets
 
       - name: Prepare Application (--prepare-application)
