--- a/.github/workflows/BuildProduct.yml
+++ b/.github/workflows/BuildProduct.yml
@@ -24,7 +24,10 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Install Dependencies
-        run: /Library/Frameworks/Python.framework/Versions/3.11/bin/python3 -m pip install -r requirements.txt
+        run: |
+          /Library/Frameworks/Python.framework/Versions/3.11/bin/python3 -m pip install -r requirements.txt
+          /Library/Frameworks/Python.framework/Versions/3.11/bin/python3 -m pip install wxPython --no-binary wxPython --pre
+            
 
       - name: Force Universal2 charset for Python
         run: |
