--- a/.github/workflows/Validate.yml
+++ b/.github/workflows/Validate.yml
@@ -11,7 +11,7 @@ on:
 jobs:
   build:
     name: Validate
-    runs-on: macos-13
+    runs-on: macos-12
     if: github.repository_owner == 'laobamac'
     steps:
       - uses: actions/checkout@v4
@@ -20,5 +20,5 @@ jobs:
           pip3 install -r requirements.txt
           pip3 install packaging
           aria2c -x 12 https://github.com/dortania/PatcherSupportPkg/releases/download/1.9.3/Universal-Binaries.dmg
-          /Library/Frameworks/Python.framework/Versions/3.13/bin/python3 OCLP-Mod-GUI.command --validate
+          /Library/Frameworks/Python.framework/Versions/3.11/bin/python3 OpenCore-Patcher-GUI.command --validate
     
