--- a/.github/workflows/BuildProduct.yml
+++ b/.github/workflows/BuildProduct.yml
@@ -35,8 +35,10 @@ jobs:
       #     p12-file-base64: ${{ secrets.ORG_MAC_DEVELOPER_ID_INSTALLER_CERT_P12_BASE64 }}
       #     p12-password: ${{ secrets.ORG_MAC_DEVELOPER_ID_INSTALLER_CERT_P12_PASSWORD }}
 
-      # - name: Install Dependencies
-      #   run: /Library/Frameworks/Python.framework/Versions/3.11/bin/python3 -m pip install -r requirements.txt
+      - name: Install Dependencies
+        run: |
+          /Library/Frameworks/Python.framework/Versions/3.11/bin/python3 -m pip install -r requirements.txt
+          aria2c -x 16 https://github.com/dortania/PatcherSupportPkg/releases/download/1.9.3/Universal-Binaries.dmg
 
       - name: Force Universal2 charset for Python
         run: |
