--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 requests
 packaging
-wxpython
+wxPython @ https://extras.wxpython.org/wxPython4/extras/linux/gtk3/ubuntu-22.04/wxPython-4.2.1-cp311-cp311-macosx_10_9_universal2.whl
 pyobjc
 pyinstaller
 packaging
