--- a/.github/workflows/Validate.yml
+++ b/.github/workflows/Validate.yml
@@ -17,8 +17,8 @@ jobs:
       - uses: actions/checkout@v4
       - name: Validate
         run: |
-          pip3 install -r requirements.txt
-          pip3 install packaging
+          /Library/Frameworks/Python.framework/Versions/3.11/bin/python3 -m pip install -r requirements.txt
+          /Library/Frameworks/Python.framework/Versions/3.11/bin/python3 -m pip install packaging
           aria2c -x 16 https://github.com/dortania/PatcherSupportPkg/releases/download/1.9.3/Universal-Binaries.dmg
           /Library/Frameworks/Python.framework/Versions/3.11/bin/python3 OpenCore-Patcher-GUI.command --validate
     
