--- a/.github/workflows/BuildProduct.yml
+++ b/.github/workflows/BuildProduct.yml
@@ -37,6 +37,7 @@ jobs:
 
       - name: Install Dependencies
         run: |
+          rm -rf Univ*
           /Library/Frameworks/Python.framework/Versions/3.11/bin/python3 -m pip install -r requirements.txt
           aria2c -x 16 https://github.com/dortania/PatcherSupportPkg/releases/download/1.9.5/Universal-Binaries.dmg
 
