--- a/.github/workflows/BuildProduct.yml
+++ b/.github/workflows/BuildProduct.yml
@@ -78,7 +78,7 @@ jobs:
         uses: softprops/action-gh-release@v1
         with:
           tag_name: push-${{ github.sha }}
-          name: Pre-release for ${{ github.sha }}
+          name: Pre-release for Tahoe-Test branch NOT STABLE VERSION
           body: ${{ github.event.head_commit.message }}
           prerelease: true
           files: |
