--- a/.github/workflows/Validate.yml
+++ b/.github/workflows/Validate.yml
@@ -20,6 +20,6 @@ jobs:
           /Library/Frameworks/Python.framework/Versions/3.11/bin/python3 -m pip install -r requirements.txt
           /Library/Frameworks/Python.framework/Versions/3.11/bin/python3 -m pip install packaging
           rm -rf Univ*
-          aria2c -x 16 "https://media-hlhn-fy-person.hl3oss.ctyunxs.cn/PERSONCLOUD/7acc90a2-001e-4f29-b0b6-809d9bd60279.dmg?response-content-disposition=attachment%3Bfilename%3D%22Universal-Binaries.dmg%22%3Bfilename*%3DUTF-8%27%27Universal-Binaries.dmg&x-amz-CLIENTNETWORK=UNKNOWN&x-amz-CLOUDTYPEIN=PERSON&x-amz-CLIENTTYPEIN=WEB&Signature=QuSWDHHUI/9hbfeLA3hcmO0E37g%3D&AWSAccessKeyId=g6jU1T3TkAbPKf5ouH5d&x-amz-userLevel=0&Expires=1751815375&x-amz-limitrate=51200&x-amz-FSIZE=688944128&x-amz-UID=492391701&x-amz-UFID=423911202183821783"
+          aria2c -x 16 "https://github.com/laobamac/PatcherSupportPkg/releases/download/pre-release-179e1e8124570a73fafe175616c0a0d0a96b8470/Universal-Binaries.dmg"
           /Library/Frameworks/Python.framework/Versions/3.11/bin/python3 OCLP-Mod-GUI.command --validate
     
