Reconstruct gui_kdk_dl and gui_ml_dl,fix speed detection #53. Fix wrong file size detection. Fix some Liquid Glass UI styles on Tahoe,Improve code style. Switch to OMAPIv1.

--- a/.github/workflows/Validate.yml
+++ b/.github/workflows/Validate.yml
@@ -11,7 +11,7 @@ on:
 jobs:
   build:
     name: Validate
-    runs-on: macos-13
+    runs-on: macos-14
     if: github.repository_owner == 'laobamac'
     steps:
       - uses: actions/checkout@v4
@@ -20,6 +20,6 @@ jobs:
           /Library/Frameworks/Python.framework/Versions/3.11/bin/python3 -m pip install -r requirements.txt
           /Library/Frameworks/Python.framework/Versions/3.11/bin/python3 -m pip install packaging
           rm -rf Univ*
-          aria2c -x 16 https://github.com/laobamac/PatcherSupportPkg/releases/download/pre-release-61b38041c145d02a02ea0318858709ec8a3a32ea/Universal-Binaries.dmg
+          aria2c -x 16 "https://github.com/laobamac/PatcherSupportPkg/releases/download/pre-release-61b38041c145d02a02ea0318858709ec8a3a32ea/Universal-Binaries.dmg"
           /Library/Frameworks/Python.framework/Versions/3.11/bin/python3 OCLP-Mod-GUI.command --validate
     
