--- a/.github/workflows/BuildProduct.yml
+++ b/.github/workflows/BuildProduct.yml
@@ -11,7 +11,7 @@ on:
 jobs:
   build:
     name: Build wxPython
-    runs-on: macos-latest
+    runs-on: macos-26
     if: github.repository_owner == 'laobamac'
 
     env:
