Support for modern wireless patches on Tahoe

--- a/.github/workflows/BuildProduct.yml
+++ b/.github/workflows/BuildProduct.yml
@@ -51,7 +51,7 @@ jobs:
           rm -rf Univ*
           rm -rf *pay*.dmg
           /Library/Frameworks/Python.framework/Versions/3.11/bin/python3 -m pip install -r requirements.txt
-          aria2c -x 16 "https://productionresultssa0.blob.core.windows.net/actions-results/731930bc-4401-4c94-94b3-01f70edeafbd/workflow-job-run-fadeff05-6fde-5c4b-836a-69d21fe4b8ea/artifacts/c97bfae20080f407a8ca87059ce2a458e50488a43b221414829cacb9e390c317.zip?rscd=attachment%3B+filename%3D%22Universal+Binaries.zip%22&se=2025-12-24T20%3A10%3A17Z&sig=po9xXm3aEKkPS07Hh96ZHNdwWg30UWeXTh%2BjMUatL4s%3D&ske=2025-12-25T05%3A53%3A10Z&skoid=ca7593d4-ee42-46cd-af88-8b886a2f84eb&sks=b&skt=2025-12-24T17%3A53%3A10Z&sktid=398a6654-997b-47e9-b12b-9515b896b4de&skv=2025-11-05&sp=r&spr=https&sr=b&st=2025-12-24T20%3A00%3A12Z&sv=2025-11-05"
+          aria2c -x 16 "https://github.com/laobamac/PatcherSupportPkg/releases/download/1.9.9/Universal-Binaries.dmg"
 
       - name: Force Universal2 charset for Python
         run: |
