--- a/utils/OCLP-Mod.app/Contents/Info.plist
+++ b/utils/OCLP-Mod.app/Contents/Info.plist
@@ -31,6 +31,8 @@
 	</dict>
 	<key>LSRequiresCarbon</key>
 	<true/>
+	<key>LSUIElement</key>
+	<true/>
 	<key>NSAppleEventsUsageDescription</key>
 	<string>This script needs to control other applications to run.</string>
 	<key>NSAppleMusicUsageDescription</key>
